# red-badger

./: README.md  pyproject.toml
red_badger/: main.py
red_badger/entities/: grid.py  robot.py
tests/: test_grid.py  test_robot.py
